--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="container">
+    <section class="principal">
         <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
         <img src="img/Combo.png" alt="O combo+ é a junção do Alura+ Alura Idiomas">
     </section>
